# vlsc

./: AGENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py
app/checks/: __init__.py  confidence.py  netprobe.py  scoring.py  xray_adapter.py
app/services/: retention.py  scan_runner.py  scanner.py  settings_store.py  xray_pool.py
app/utils/: __init__.py  fingerprints.py  logging.py  masking.py  preflight.py
app/vless/: __init__.py  parser.py
app/web/: __init__.py  routes.py
app/web/static/: styles.css
app/web/templates/: base.html  dashboard.html  scan.html  server_details.html  settings.html
tests/: conftest.py  test_api.py  test_exception_handling.py  test_layout.py  test_parser.py  test_preflight.py  test_retention_service.py  test_scanner_service.py  test_structure.py  test_xray_adapter.py
